--- a/about-us.html
+++ b/about-us.html
@@ -76,8 +76,70 @@
       </div>
     </div>
   </div>
+ <div class="row">
+    <div class="col s12 m12">
+      <div class="card white darken-2">
+        <div class="card-content black-text ">
+          <span class="card-title">2018-2019 Officers</span>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Ronit Sethi</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Vice President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>SaengMoung "Jacob" Park</p>
+            </div>
+          </div>
 
-  <div class="row">
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Aditya Rao</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Ocean Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Arya Sasne</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Treasurer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Melinda Chen</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Secretary</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Daphne Hao</p>
+            </div>
+          </div>
+
+        </div>
+      
+      </div>
+    </div>
+  </div>
+ 
+
+<h2>Past Leadership</h2>
+ <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
         <div class="card-content black-text ">
@@ -144,8 +206,6 @@
       </div>
     </div>
   </div>
-
-<h2>Past Leadership</h2>
 <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
@@ -556,7 +616,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      West Windsor-Plainsboro High School South Science Club 2018-2019</a>
+      West Windsor-Plainsboro High School South Science Club 2019-2020</a>
       </div>
     </div>
   </footer>
