--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h2 class="header center white-text">Welcome to WW-P South Science Club!</h2>
         <div class="row center">
         <img src = "img/ssclogo.png" style = "width:15%; height:15%">
-          <h5 class="header col s12 light white-text">For the past decade, the South Science Club has been providing scientific opportunities for students in the school. We provide numerous competitions: Science Olympiad, Science Bowl, and Ocean Bowl.</h5>
+          <h5 class="header col s12 light white-text">For the past decade, the South Science Club has been providing scientific opportunities for students in the school. We provide several competitions: Science Olympiad, Science Bowl, and Ocean Bowl.</h5>
         </div>
        
       </div>
@@ -98,7 +98,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      West Windsor-Plainsboro High School South Science Club 2018-2019</a>
+      West Windsor-Plainsboro High School South Science Club 2019-2020</a>
       </div>
     </div>
   </footer>
