--- a/past-successes.html
+++ b/past-successes.html
@@ -62,7 +62,7 @@
       <div class="container">
       <br><br>
         <h2 class="header center black-text">Past Successes</h2>
-       
+       <span>(last update) 6/7/2019</span>
     <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
@@ -77,6 +77,18 @@
                 </tr>
               </thead>
               <tbody>
+              <tr>
+                  <td>June 1, 2019</td>
+                  <td>Science Olympiad</td>
+                  <td>Nationals at Cornell University</td>
+                  <td>14</td>
+                </tr>
+                 <tr>
+                  <td>May 11, 2019</td>
+                  <td>Envirothon</td>
+                  <td>NJ Envirothon at Great Times Day Camp</td>
+                  <td>6</td>
+                </tr>
               <tr>
                   <td>March 12, 2019</td>
                   <td>Science Olympiad</td>
@@ -264,7 +276,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      West Windsor-Plainsboro High School South Science Club 2018-2019</a>
+      West Windsor-Plainsboro High School South Science Club 2019-2020</a>
       </div>
     </div>
   </footer>
