--- a/past-successes.html
+++ b/past-successes.html
@@ -81,7 +81,7 @@
                   <td>June 1, 2019</td>
                   <td>Science Olympiad</td>
                   <td>Nationals at Cornell University</td>
-                  <td>14</td>
+                  <td>14 (DuPont Team Enterprise Award)</td>
                 </tr>
                  <tr>
                   <td>May 11, 2019</td>
