update advisers for 2019
jacob was here

--- a/about-us.html
+++ b/about-us.html
@@ -69,7 +69,7 @@
       <div class="card white darken-2">
         <div class="card-content black-text ">
           <span class="card-title">Our Wonderful Advisor</span>
-          <p>Dr. Sharma</p>
+          <p>Dr. Bhattacharya & Ms. Marshall</p>
 
         </div>
       
