make advisor plural  - > advisors
:)

--- a/about-us.html
+++ b/about-us.html
@@ -68,7 +68,7 @@
     <div class="col s12 m12">
       <div class="card white darken-2">
         <div class="card-content black-text ">
-          <span class="card-title">Our Wonderful Advisor</span>
+          <span class="card-title">Our Wonderful Advisors</span>
           <p>Dr. Bhattacharya & Ms. Marshall</p>
 
         </div>
