--- a/past-successes.html
+++ b/past-successes.html
@@ -77,6 +77,24 @@
                 </tr>
               </thead>
               <tbody>
+		<tr>
+                  <td>March 10, 2020</td>
+                  <td>Science Olympiad</td>
+                  <td>States at Middlesex County College</td>
+                  <td>2</td>
+		</tr>
+		<tr>
+                  <td>Febuary 22, 2020</td>
+                  <td>Science Bowl</td>
+                  <td>Regionals at PPPL</td>
+                  <td>4</td>
+                </tr>
+		<tr>
+                  <td>Febuary 1, 2020</td>
+                  <td>Ocean Bowl</td>
+                  <td>Regionals at Rutgers</td>
+                  <td>3</td>
+                </tr>
               <tr>
                   <td>June 1, 2019</td>
                   <td>Science Olympiad</td>
@@ -101,7 +119,6 @@
                   <td>States at Middlesex County College</td>
                   <td>2</td>
                 </tr>
-      
                 <tr>
                   <td>February 3, 2018</td>
                   <td>Ocean Bowl</td>
