--- a/about-us.html
+++ b/about-us.html
@@ -80,6 +80,77 @@
     <div class="col s12 m12">
       <div class="card white darken-2">
         <div class="card-content black-text ">
+          <span class="card-title">2020-2021 Officers</span>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Daphne Hao</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Vice President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Melinda Chen</p>
+            </div>
+          </div>
+
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Rut Mehta</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Ocean Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Arya Sasne</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Treasurer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Allen Zheng</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Secretary</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Pratyoy "Lobster" Biswas</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Junior Officer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Abhishek Das</p>
+            </div>
+          </div>
+
+        </div>
+      
+      </div>
+    </div>
+  </div>
+ 
+
+<h2>Past Leadership</h2>
+ <div class="row">
+    <div class="col s12 m12">
+      <div class="card white darken-2">
+        <div class="card-content black-text ">
           <span class="card-title">2019-2020 Officers</span>
           <div class = "row">
             <div class = "col s12 m6"> 
@@ -136,9 +207,6 @@
       </div>
     </div>
   </div>
- 
-
-<h2>Past Leadership</h2>
  <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
