--- a/about-us.html
+++ b/about-us.html
@@ -97,7 +97,14 @@
             <p>Melinda Chen</p>
             </div>
           </div>
-
+	  <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Build Captain</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Om Deshmukh</p>
+            </div>
+          </div>
           <div class = "row">
             <div class = "col s12 m6"> 
             <p>Science Bowl President</p>
