--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
 
   </style>
@@ -68,7 +68,7 @@
     <div class="col s12 m12">
       <div class="card white darken-2">
         <div class="card-content black-text ">
-          <span class="card-title">Our Wonderful Advisors</span>
+          <span class="card-title">Our Advisors</span>
           <p>Dr. Bhattacharya & Ms. Marshall</p>
 
         </div>
