--- a/science-olympiad.html
+++ b/science-olympiad.html
@@ -20,7 +20,10 @@
   <link href="style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
   <style>
-
+	body {
+        font-family: 'Roboto', serif;
+        font-size: 48px;
+      }
   </style>
 </head>
 <body>
