--- a/past-successes.html
+++ b/past-successes.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400" rel="stylesheet">
   <style>
 
   </style>
@@ -67,7 +67,7 @@
     <div class="col s12 m12">
       <div class="card white darken-2">
         <div class="card-content black-text ">
-          <table class="responsive-table centered" style = "font-family: Raleway; ">
+          <table class="responsive-table centered" style = "font-family: Roboto; ">
               <thead>
                 <tr>
                     <th>Date</th>
