--- a/science-olympiad.html
+++ b/science-olympiad.html
@@ -81,9 +81,17 @@
               <div class="hr-line"></div></div>
 <br>
               <p>
+		      <h4>2020-2021 Year Update</h4>
+         <p>
+This year Science Olympiad will be run differently due to the pandemic. There are going to be 3 different tournament models, but South will likely only be running on miniSO. This means we will be taking the test online in separate locations following the districts standards. Due to this, build events will likely not be happening as well as the lab portion of several lab events. The complete list can be found <a href = "https://www.soinc.org/sites/default/files/uploaded_files/2021_MiniSO_Events.pdf">here.</a>.
+<br><br>
+
+Our club is also now meeting online over zoom. We have a Google Classroom now for any announcements so please join! (Code: mxlkgtu) Our tryouts will also now be held in December and we will be holding lectures to help prepare beginners leading up to the tryout dates. 
+<br><br>
+</p>
          <h4>The Competition</h4>
          <p>
-There are 23 events this year, which can be found <a href = "https://www.soinc.org/events/2019-event-table">here (go to division C)</a>. At competition, each team sends a pair of students (in some cases three) to compete in each event. The rules, which can be found on the rules manual for each event are different, but in the end, each team gets a placement in the event according to how well they did, with "1" being the best (first place). The overall results are then determined by adding up the individual placements, with the lowest score winning.
+There are 23 events this year, which can be found <a href = "https://www.soinc.org/events/2021-event-table">here (go to division C)</a>. At competition, each team sends a pair of students (in some cases three) to compete in each event. The rules, which can be found on the rules manual for each event are different, but in the end, each team gets a placement in the event according to how well they did, with "1" being the best (first place). The overall results are then determined by adding up the individual placements, with the lowest score winning.
 <br><br>
 
 There are multiple levels of competition: regional, invitational, state, and national. The information for the regional and state-level competitions can be found here, and those for national tournament here. We also attend invitational competitions, which are currently TBA. We will update the status on the competitions we will attend once it is determined.
