fixed the period

--- a/science-olympiad.html
+++ b/science-olympiad.html
@@ -83,7 +83,7 @@
               <p>
 		      <h4>2020-2021 Year Update</h4>
          <p>
-This year Science Olympiad will be run differently due to the pandemic. There are going to be 3 different tournament models, but South will likely only be running on miniSO. This means we will be taking the test online in separate locations following the districts standards. Due to this, build events will likely not be happening as well as the lab portion of several lab events. The complete list can be found <a href = "https://www.soinc.org/sites/default/files/uploaded_files/2021_MiniSO_Events.pdf">here.</a>.
+This year Science Olympiad will be run differently due to the pandemic. There are going to be 3 different tournament models, but South will likely only be running on miniSO. This means we will be taking the test online in separate locations following the districts standards. Due to this, build events will likely not be happening as well as the lab portion of several lab events. The complete list can be found <a href = "https://www.soinc.org/sites/default/files/uploaded_files/2021_MiniSO_Events.pdf">here</a>.
 <br><br>
 
 Our club is also now meeting online over zoom. We have a Google Classroom now for any announcements so please join! (Code: mxlkgtu) Our tryouts will also now be held in December and we will be holding lectures to help prepare beginners leading up to the tryout dates. 
