--- a/science-olympiad.html
+++ b/science-olympiad.html
@@ -72,7 +72,7 @@
         </div>
         <div class="card-content black-text ">
         <p>
-         Science Olympiad is a high school competition in which students compete in events pertaining to different scientific disciplines, from Astronomy, to Herpetology, to Mission Possible. WW-P South's Science Olympiad team has a tradition of excellence. We have represented New Jersey at the National Science Olympiad competition nine times in the past thirteen years by winning the state competition.
+         Science Olympiad is a high school competition in which students compete in events pertaining to different scientific disciplines, from Astronomy, to Herpetology, to Mission Possible. WW-P South's Science Olympiad team has a tradition of excellence. We have represented New Jersey at the National Science Olympiad competition ten times in the past fifteen years by winning the state competition.
           </p>
           <br>
           <div class="hr-theme-slash-2">
