--- a/past-successes.html
+++ b/past-successes.html
@@ -78,6 +78,12 @@
               </thead>
               <tbody>
 		<tr>
+                  <td>April 13-15, 2021</td>
+                  <td>Science Olympiad</td>
+                  <td>States at Middlesex County College</td>
+                  <td>1</td>
+		</tr>
+		<tr>
                   <td>March 10, 2020</td>
                   <td>Science Olympiad</td>
                   <td>States at Middlesex County College</td>
