--- a/past-successes.html
+++ b/past-successes.html
@@ -62,7 +62,7 @@
       <div class="container">
       <br><br>
         <h2 class="header center black-text">Past Successes</h2>
-       <span>(last update) 6/16/2020</span>
+       <span>(last update) 7/02/2021</span>
     <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
@@ -78,10 +78,28 @@
               </thead>
               <tbody>
 		<tr>
+                  <td>May 21-22, 2021</td>
+                  <td>Science Olympiad</td>
+                  <td>Nationals at Arizona State University</td>
+                  <td>6</td>
+		</tr>
+        <tr>
                   <td>April 13-15, 2021</td>
                   <td>Science Olympiad</td>
                   <td>States at Middlesex County College</td>
                   <td>1</td>
+		</tr>
+        <tr>
+                  <td>March 6-7, 2021</td>
+                  <td>Ocean Bowl</td>
+                  <td>Regionals at Rutgers</td>
+                  <td>5-8</td>
+		</tr>
+        <tr>
+                  <td>February 20, 2021</td>
+                  <td>Science Bowl</td>
+                  <td>Regionals at PPPL</td>
+                  <td>2</td>
 		</tr>
 		<tr>
                   <td>March 10, 2020</td>
