--- a/about-us.html
+++ b/about-us.html
@@ -80,6 +80,92 @@
     <div class="col s12 m12">
       <div class="card white darken-2">
         <div class="card-content black-text ">
+          <span class="card-title">2021-2022 Officers</span>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Abhishek Das</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Vice President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Arav Nangia</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Mason Wang</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Bowl Vice President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Suraj Oruganti</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Ocean Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Matthew Chen</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Ocean Bowl Vice President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Rohan Das</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Treasurer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Edward Xiong</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Secretary</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Andrew Van Dusen</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Junior Officer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Alexander Huang</p>
+            </div>
+          </div>
+
+        </div>
+      
+      </div>
+    </div>
+  </div>
+ 
+
+<h2>Past Leadership</h2>
+ <div class="row">
+    <div class="col s12 m12">
+      <div class="card white darken-2">
+        <div class="card-content black-text ">
           <span class="card-title">2020-2021 Officers</span>
           <div class = "row">
             <div class = "col s12 m6"> 
@@ -151,9 +237,6 @@
       </div>
     </div>
   </div>
- 
-
-<h2>Past Leadership</h2>
  <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
