--- a/past-successes.html
+++ b/past-successes.html
@@ -62,7 +62,7 @@
       <div class="container">
       <br><br>
         <h2 class="header center black-text">Past Successes</h2>
-       <span>(last update) 7/02/2021</span>
+       <span>Updated July 28, 2022.</span>
     <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
@@ -78,27 +78,45 @@
               </thead>
               <tbody>
 		<tr>
+                  <td>March 22-24, 2022</td>
+                  <td>Science Olympiad</td>
+                  <td>Virtual States Tournament</td>
+                  <td>3</td>
+		</tr>
+		<tr>
+                  <td>February 19, 2022</td>
+                  <td>Science Bowl</td>
+                  <td>Regionals at PPPL (Virtual)</td>
+                  <td>2</td>
+		</tr>
+		<tr>
+                  <td>February 12, 2022</td>
+                  <td>Ocean Bowl</td>
+                  <td>Regionals at Rutgers (Virtual)</td>
+                  <td>2</td>
+		</tr>
+		<tr>
                   <td>May 21-22, 2021</td>
                   <td>Science Olympiad</td>
-                  <td>Nationals at Arizona State University</td>
+                  <td>Nationals at Arizona State University (Virtual)</td>
                   <td>6</td>
 		</tr>
         <tr>
                   <td>April 13-15, 2021</td>
                   <td>Science Olympiad</td>
-                  <td>States at Middlesex County College</td>
+                  <td>Virtual States Tournament</td>
                   <td>1</td>
 		</tr>
         <tr>
                   <td>March 6-7, 2021</td>
                   <td>Ocean Bowl</td>
-                  <td>Regionals at Rutgers</td>
+                  <td>Regionals at Rutgers (Virtual)</td>
                   <td>5-8</td>
 		</tr>
         <tr>
                   <td>February 20, 2021</td>
                   <td>Science Bowl</td>
-                  <td>Regionals at PPPL</td>
+                  <td>Regionals at PPPL (Virtual)</td>
                   <td>2</td>
 		</tr>
 		<tr>
