--- a/about-us.html
+++ b/about-us.html
@@ -115,7 +115,7 @@
           </div>
           <div class = "row">
             <div class = "col s12 m6"> 
-            <p>Ocean Bowl President</p>
+            <p>Science Bowl Vice President</p>
             </div>
             <div class = "col s12 m6" style = "font-weight: 300;"> 
             <p>Rohan Das</p>
