--- a/about-us.html
+++ b/about-us.html
@@ -76,6 +76,85 @@
       </div>
     </div>
   </div>
+
+ <div class="row">
+    <div class="col s12 m12">
+      <div class="card white darken-2">
+        <div class="card-content black-text ">
+          <span class="card-title">2023-2024 Officers</span>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Abram Chen</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Vice President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Arnav Ayyalasomayajula Narasimha</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Build Captain</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Paul Li</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Pavan Jayaraman</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Ocean Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Nishant Ganesan</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Treasurer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Sobhika Sampath/p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Secretary</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Lina Lin</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Junior Officer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Kathie Wang</p>
+            </div>
+          </div>
+
+        </div>
+      
+      </div>
+    </div>
+  </div>
+ 
+
+<h2>Past Leadership</h2>
  <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
@@ -151,9 +230,6 @@
       </div>
     </div>
   </div>
- 
-
-<h2>Past Leadership</h2>
  <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
