--- a/about-us.html
+++ b/about-us.html
@@ -127,7 +127,7 @@
             <p>Science Olympiad Treasurer</p>
             </div>
             <div class = "col s12 m6" style = "font-weight: 300;"> 
-            <p>Sobhika Sampath/p>
+            <p>Sobhika Sampath</p>
             </div>
           </div>
           <div class = "row">
