--- a/science-olympiad.html
+++ b/science-olympiad.html
@@ -72,7 +72,7 @@
         </div>
         <div class="card-content black-text ">
         <p>
-         Science Olympiad is a high school competition in which students compete in events pertaining to different scientific disciplines, from Astronomy, to Herpetology, to Mission Possible. WW-P South's Science Olympiad team has a tradition of excellence. We have represented New Jersey at the National Science Olympiad competition ten times in the past fifteen years by winning the state competition.
+         Science Olympiad is a high school competition in which students compete in events pertaining to different scientific disciplines, from Astronomy, to Entomology, to Helicopter. WW-P South's Science Olympiad team has a tradition of excellence. We have represented New Jersey at the National Science Olympiad competition nine times in the past fifteen years by winning the state competition.
           </p>
           <br>
           <div class="hr-theme-slash-2">
@@ -93,7 +93,7 @@ There are multiple levels of competition: regional, invitational, state, and nat
 <p>
 Preparing for Science Olympiad is a long process. For study events, it involves getting acquainted with the topic of the event, delving deeper into that topic, taking notes on the topic, and, once ready, taking practice tests. For builders, it requires planning the structure, building the structure, and repeatedly testing and adjusting right up to the competition. Obviously, one must have fun while doing so, or it will not be effective.
 <br><br>
-This year, tryouts will occur in late October - November, and typically last two to three weeks. Tryouts are open to anyone interested. Usually, approximately 50 - 70 people try out, and two teams (15 main members plus 3 alternates each) are selected. Naturally, the process is highly competitive, so making the team requires hard work and dedication. Prior experience is not required. Those making the team will attend the regional and invitational tournaments, as well as take a series of quizzes, and their results will determine the members of the team that will compete at States and, if we continue our streak, Nationals. Those who do not make that team can opt to try out for trial events, which will allow them to also compete at Nationals, but only in the trial events.
+This year, tryouts will occur in late October - November, and typically last two to three weeks. Tryouts are open to anyone interested. Usually, approximately 50 - 70 people try out, and two teams (15 members) are selected. Additionally, a 10 more people are selected to complete a top 40 pool. Naturally, the process is highly competitive, so making the team requires hard work and dedication. Prior experience is not required. Those making the team will attend the regional and invitational tournaments, as well as take a series of quizzes, and their results will determine the members of the team that will compete at States and, if we continue our streak, Nationals. Those who do not make that team can opt to try out for trial events, which will allow them to also compete at Nationals, but only in the trial events.
 <br><br>
 </p>
         </div>
