--- a/about-us.html
+++ b/about-us.html
@@ -81,6 +81,76 @@
     <div class="col s12 m12">
       <div class="card white darken-2">
         <div class="card-content black-text ">
+          <span class="card-title">2024-2025 Officers</span>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Lina Lin</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Vice Presidents</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Sobhika Sampath & Kedar Mahashabde</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Sanjay Oruganti</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Ocean Bowl President</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Rishi Patwardhan</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Treasurer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Adithi Sugur</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Secretary</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Kathie Wang</p>
+            </div>
+          </div>
+          <div class = "row">
+            <div class = "col s12 m6"> 
+            <p>Science Olympiad Junior Officer</p>
+            </div>
+            <div class = "col s12 m6" style = "font-weight: 300;"> 
+            <p>Dhairya Mathur</p>
+            </div>
+          </div>
+
+        </div>
+      
+      </div>
+    </div>
+  </div>
+ 
+
+<h2>Past Leadership</h2>
+ <div class="row">
+    <div class="col s12 m12">
+      <div class="card white darken-2">
+        <div class="card-content black-text ">
           <span class="card-title">2023-2024 Officers</span>
           <div class = "row">
             <div class = "col s12 m6"> 
@@ -152,9 +222,6 @@
       </div>
     </div>
   </div>
- 
-
-<h2>Past Leadership</h2>
  <div class="row">
     <div class="col s12 m12">
       <div class="card white darken-2">
