--- a/past-successes.html
+++ b/past-successes.html
@@ -77,6 +77,18 @@
                 </tr>
               </thead>
               <tbody>
+		 <tr>
+                  <td>March 14, 2024</td>
+                  <td>Science Olympiad</td>
+                  <td>States at Middlesex County College</td>
+                  <td>3</td>
+		</tr>		
+		<tr>
+                  <td>March 16, 2023</td>
+                  <td>Science Olympiad</td>
+                  <td>States at Middlesex County College</td>
+                  <td>3</td>
+		</tr>     
 		<tr>
                   <td>March 22-24, 2022</td>
                   <td>Science Olympiad</td>
@@ -335,7 +347,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      West Windsor-Plainsboro High School South Science Club 2022-2023</a>
+      West Windsor-Plainsboro High School South Science Club 2024-2025</a>
       </div>
     </div>
   </footer>
