--- a/ocean-bowl.html
+++ b/ocean-bowl.html
@@ -75,7 +75,7 @@
             <p>
 The South Science Club participates in National Ocean Sciences Bowl (NOSB), a buzzer-based competition similar to Science Bowl in structure. NOSB tests various topics in oceanography, including geography, geology, marine policy, and technology. The regional Shore Bowl competitions are held every year at the Rutgers Institute of Marine and Coastal Science, and the national competitions are held at the Consortium for Ocean Leadership in Washington, D.C.. In 2016 and 2017, we placed 1st at the regional competition.
 <br><br>
-Tryouts and practices are on Thursdays after school. More information regarding the National Ocean Science Bowl can be found <a href = "http://nosb.org/">here</a>. If you have any questions, feel free to email Rohan Das, our Ocean Bowl President, at <a href="mailto:southscienceclub@gmail.com">southscienceclub@gmail.com</a>.</p>
+Tryouts and practices are on Thursdays after school. More information regarding the National Ocean Science Bowl can be found <a href = "http://nosb.org/">here</a>. If you have any questions, feel free to email Rishi Patwardhan, our Ocean Bowl President, at <a href="mailto:southscienceclub@gmail.com">southscienceclub@gmail.com</a>.</p>
 
         </div>
       
@@ -114,7 +114,7 @@ Tryouts and practices are on Thursdays after school. More information regarding 
     </div>
     <div class="footer-copyright">
       <div class="container">
-      West Windsor-Plainsboro High School South Science Club 2022-2023</a>
+      West Windsor-Plainsboro High School South Science Club 2024-2025</a>
       </div>
     </div>
   </footer>
